Revert "Merge branch 'useLSP4IJmarket_2024.1_intellij_Support' into contIntegrationLsp4ij"
This reverts commit 55c86c4d79ea87c35d2ba16afcb269da7a2d7d19, reversing
changes made to 15d8dda7181b055437dab6dbfc818b4df68a0aaa.